--- a/learn-certs-pr/exams/az-600.yml
+++ b/learn-certs-pr/exams/az-600.yml
@@ -3,12 +3,12 @@ title: Configuring and Operating a Hybrid Cloud with Microsoft Azure Stack Hub (
 metadata:
   title: 'Examen AZ-600: Configuring and Operating a Hybrid Cloud with Microsoft Azure Stack Hub'
   description: 'Examen AZ-600: Configuring and Operating a Hybrid Cloud with Microsoft Azure Stack Hub'
-  ms.openlocfilehash: cc791bc89a8043ec78cc382fa2e20a39756c3a3d
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
+  ms.openlocfilehash: 2f7c0bc61e6e3a253d07df4d51471850310685fd
+  ms.sourcegitcommit: fd55a80afc282528952dc1782d93c51fffc57cb4
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137656937"
+  ms.lasthandoff: 01/28/2022
+  ms.locfileid: "137818594"
 uid: exam.az-600
 displayName: AZ-600
 summary: "> [!IMPORTANT]\n> Der Inhalt dieser Prüfung wurde am 23. November 2021 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.\n> \n> HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\nKandidat*innen für das Examen AZ-600 sind Azure-Administrator*innen und Azure Stack Hub-Betreiber*innen, die Azure-Stack Hub nutzen, um ihren Endbenutzern oder Kunden Clouddienste innerhalb ihres eigenen Rechenzentrums zur Verfügung zu stellen.\n\nKandidat*innen für dieses Examen sollten über umfangreiche Erfahrung im Verwalten und Betreiben von Azure Stack Hub-Umgebungen verfügen. Sie sollten über ein fundiertes Verständnis von Azure sowie über Kenntnisse in den Bereichen Virtualisierung, Netzwerke und Identitätsverwaltung verfügen. Sie sollten auch wissen, wie Azure Stack Hub DevOps-Prozesse und das hybride Entwicklungsmodell ermöglicht."
@@ -52,6 +52,12 @@ products:
 - azure-active-directory
 courses:
 - uid: course.az-600t00
+paths:
+- uid: learn.wwl.overview-of-azure-stack-hub
+- uid: learn.wwl.provide-services-for-azure-stack-hub
+- uid: learn.wwl.implement-data-center-integration-for-azure-stack-hub
+- uid: learn.wwl.manage-identity-access-for-azure-stack-hub
+- uid: learn.wwl.manage-infrastructure-for-azure-stack-hub
 relatedCertifications:
 - related:
     uid: certification.azure-stack-hub-operator
