--- a/learn-certs-pr/courses/az-305t00.yml
+++ b/learn-certs-pr/courses/az-305t00.yml
@@ -3,12 +3,12 @@ title: Designing Microsoft Azure Infrastructure Solutions
 metadata:
   title: 'Kurs AZ-305T00--A: Designing Microsoft Azure Infrastructure Solutions'
   description: 'Kurs AZ-305T00--A: Designing Microsoft Azure Infrastructure Solutions'
-  ms.openlocfilehash: d33bf40977c08ffa4928e95d8a6f4df8d6494715
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
+  ms.openlocfilehash: 1a73a724aeae30d0c905458d0b188de74f2075f6
+  ms.sourcegitcommit: 7f4eed93623014c8773df17f68152c44d1e02806
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137655903"
+  ms.lasthandoff: 01/31/2022
+  ms.locfileid: "137860771"
 uid: course.az-305t00
 courseNumber: AZ-305T00
 hoursToComplete: 96
@@ -35,6 +35,20 @@ products:
 - azure
 exams:
 - uid: exam.az-305
+studyGuide:
+- uid: learn.wwl.design-governance
+- uid: learn.wwl.design-compute-solution
+- uid: learn.wwl.design-data-storage-solution-for-non-relational-data
+- uid: learn.wwl.design-data-storage-solution-for-relational-data
+- uid: learn.wwl.design-data-integration
+- uid: learn.wwl.design-application-architecture
+- uid: learn.wwl.design-authentication-authorization-solutions
+- uid: learn.wwl.design-solution-to-log-monitor-azure-resources
+- uid: learn.wwl.design-network-solutions
+- uid: learn.wwl.design-solution-for-backup-disaster-recovery
+- uid: learn.wwl.design-migrations
+- uid: learn.azure-well-architected-framework
+- uid: learn.accelerate-cloud-adoption
 summary: >-
   In diesem Kurs erfahren Azure-Lösungsarchitekten, wie Infrastrukturlösungen entworfen werden. In den Kursthemen werden Governance, Compute, Anwendungsarchitektur, Speicher, Datenintegration, Authentifizierung, Netzwerke, Geschäftskontinuität und Migrationen behandelt. In diesem Kurs werden Lektionen mit Fallstudien kombiniert, sodass grundlegende Entwurfsprinzipien für Architekten veranschaulicht werden können.
 
