--- a/learn-certs-pr/exams/mb-500.yml
+++ b/learn-certs-pr/exams/mb-500.yml
@@ -3,12 +3,12 @@ title: 'Microsoft Dynamics 365: Finance and Operations Apps Developer'
 metadata:
   title: 'MB-500: Microsoft Dynamics 365: Finance and Operations Apps Developer'
   description: 'MB-500: Microsoft Dynamics 365: Finance and Operations Apps Developer'
-  ms.openlocfilehash: b458f2dc23fd8766712e1f0b6b112028967ba7d5
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
+  ms.openlocfilehash: 38c475698b6bfb148e5d93629e18fb76903a7073
+  ms.sourcegitcommit: fd55a80afc282528952dc1782d93c51fffc57cb4
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137656431"
+  ms.lasthandoff: 01/28/2022
+  ms.locfileid: "137818561"
 uid: exam.mb-500
 displayName: MB-500
 summary: >-
@@ -30,6 +30,7 @@ summary: >-
 subTitle: 'In dem Examen wird Ihre Fähigkeit geprüft, die folgenden technischen Aufgaben zu erledigen: Das Planen von Architektur- und Lösungsentwürfen; das Anwenden von Entwicklertools; das Entwerfen und Entwickeln von AOT-Elementen; das Entwickeln und Testen von Code; das Implementieren von Berichterstellung; das Integrieren und Verwalten von Datenlösungen und das Implementieren von Sicherheit sowie das Optimieren der Leistung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE42pBB
+practiceTestUrl: https://in.mindhub.com/mb-500-microsoft-dynamics-365-finance-and-operations-apps-developer-microsoft-official-practice-test/p/MU-MB-500?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-500&examname=Exam%20MB-500:%20Microsoft%20Dynamics%20365%20Finance%20and%20Operations%20Apps%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-500
 locales:
 - en
