--- a/learn-certs-pr/d365-functional-consultant-marketing/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing/index.yml
@@ -2,110 +2,82 @@
 title: 'Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate'
-  description: Microsoft Dynamics 365 Marketing Functional Consultants implementieren Lösungen, die Leads gewinnen und überzeugen, Markenbekanntheit aufbauen, Omnichannel-Messaging standardisieren und Marketingeinblicke liefern.
-  ms.openlocfilehash: b7670f0b3a3fb9d4396b78c2097158fadc47c983
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137658730"
+  description: "Microsoft Dynamics\_365 Marketing Functional Consultants implementieren Lösungen, die Leads gewinnen und überzeugen, Markenbekanntheit aufbauen, Omnichannel-Messaging standardisieren und Marketingeinblicke liefern."
 uid: certification.d365-functional-consultant-marketing
 certificationRenewalUid: renewal.d365-functional-consultant-marketing
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: >-
-  > [!IMPORTANT]
-
-  > Der Inhalt dieser Zertifizierung wurde vor Kurzem aktualisiert. [Prüfung MB-220](/learn/certifications/exams/mb-220) wurde am 9. Juli 2021 und [Prüfung PL-200](/learn/certifications/exams/pl-200) am 1. Oktober 2021 aktualisiert. Laden Sie die Dokumente zur Kompetenzmessung auf den zugehörigen Prüfungsseiten herunter, um zu sehen, was sich geändert hat.
-
-
-  <br/>
-
-  Wenn Sie ein Functional Consultant, ein Experte, der Microsoft Dynamics 365 for Marketing in den täglichen Geschäftsabläufen des Unternehmens verwendet, oder ein Entwickler sind, der seine Beratungskenntnisse verbessern möchte, kann diese Zertifizierung Ihnen helfen, Ihre Karriere zu fördern und sich effektiver für Projekte und Beförderungen zu positionieren.
-
-
-  Als Kandidat für diese Zertifizierung sind Sie mit modellgesteuerten Dynamics 365-Anwendungen und Datenmodellierungsprinzipien vertraut und können die Microsoft Power Platform konfigurieren. Sie implementieren Marketinginitiativen wie Kampagnen, E-Mails und Customer Journeys. Sie haben Erfahrung darin, mit den Projektbeteiligten einer Organisation zusammenzuarbeiten, um Anforderungen zu erfassen und Dynamics 365 for Marketing-Lösungen zu implementieren. Darüber hinaus konfigurieren Sie Dynamics 365 for Marketing und richten die Sicherheitsfeatures von Dynamics 365-Organisationen ein. Sie erweitern Dynamics 365-Lösungen sogar mithilfe von Power Platform-Komponenten wie Power Automate und Power Apps.
-
-
-  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erlangen, finden Sie nachstehend einige Vorschläge:
-
-  - Arbeiten Sie an einem Implementierungsprojekt für modellgesteuerte Dynamics 365-Apps.
-
-  - Begleiten Sie zu Ihrer Einarbeitung einen Functional Consultant oder Lösungsarchitekten, der mit Dynamics 365 for Marketing arbeitet.
-
-  - Nutzen Sie verfügbare Lernpfade auf Microsoft Learn.
-
-  - Melden Sie sich zu einem Präsenzschulungskurs an.
-subTitle: Microsoft Dynamics 365 Marketing Functional Consultants implementieren Lösungen, die Leads gewinnen und überzeugen, Markenbekanntheit aufbauen, Omnichannel-Messaging standardisieren und Marketingeinblicke liefern.
+summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieser Zertifizierung wird in Kürze aktualisiert. [Prüfung MB-220](/learn/certifications/exams/mb-220) wird am 28.\_Februar\_2022 aktualisiert. [Prüfung PL-200](/learn/certifications/exams/pl-200) wurde am 1. Oktober 2021 aktualisiert. Laden Sie die Dokumente zur Kompetenzmessung auf den zugehörigen Prüfungsseiten herunter, um zu sehen, was sich geändert hat.\n\n<br/>\nWenn Sie ein Functional Consultant, ein Experte, der Microsoft Dynamics\_365 for Marketing in den täglichen Geschäftsabläufen des Unternehmens verwendet, oder ein Entwickler sind, der seine Beratungskenntnisse verbessern möchte, kann diese Zertifizierung Ihnen helfen, Ihre Karriere zu fördern und sich effektiver für Projekte und Beförderungen zu positionieren.\n\nAls Kandidat für diese Zertifizierung sind Sie mit modellgesteuerten Dynamics\_365-Anwendungen und Datenmodellierungsprinzipien vertraut und können die Microsoft Power Platform konfigurieren. Sie implementieren Marketinginitiativen wie Kampagnen, E-Mails und Customer Journeys. Sie haben Erfahrung darin, mit den Projektbeteiligten einer Organisation zusammenzuarbeiten, um Anforderungen zu erfassen und Dynamics\_365 for Marketing-Lösungen zu implementieren. Darüber hinaus konfigurieren Sie Dynamics\_365 for Marketing und richten die Sicherheitsfeatures von Dynamics\_365-Organisationen ein. Sie erweitern Dynamics\_365-Lösungen sogar mithilfe von Power Platform-Komponenten wie Power Automate und Power Apps.\n\nWenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erlangen, finden Sie nachstehend einige Vorschläge:\n- Arbeiten Sie an einem Implementierungsprojekt für modellgesteuerte Dynamics\_365-Apps.\n- Begleiten Sie zu Ihrer Einarbeitung einen Functional Consultant oder Lösungsarchitekten, der mit Dynamics\_365 for Marketing arbeitet.\n- Nutzen Sie verfügbare Lernpfade auf Microsoft Learn.\n- Melden Sie sich zu einem Präsenzschulungskurs an."
+subTitle: "Microsoft Dynamics\_365 Marketing Functional Consultants implementieren Lösungen, die Leads gewinnen und überzeugen, Markenbekanntheit aufbauen, Omnichannel-Messaging standardisieren und Marketingeinblicke liefern."
 levels:
-- intermediate
+  - intermediate
 skills:
-- Configure marketing applications
-- Manage segments and lists
-- Create and manage marketing forms and pages
-- Manage leads, contacts, and accounts
-- Create and manage marketing emails
-- Manage customer journeys
-- Manage events and webinars
-- Configure Dynamics 365 Customer Voice
-- Configure Microsoft Dataverse
-- Create apps by using Microsoft Power Apps
-- Create and manage Microsoft Power Automate
-- Implement Microsoft Power Virtual Agents chatbots
-- Integrate Microsoft Power Apps with other apps and services
-- Manage solutions
+  - Configure marketing applications
+  - Manage segments and lists
+  - Create and manage marketing forms and pages
+  - 'Manage leads, contacts, and accounts'
+  - Create and manage marketing emails
+  - Manage customer journeys
+  - Manage events and webinars
+  - Configure Dynamics 365 Customer Voice
+  - Configure Microsoft Dataverse
+  - Create apps by using Microsoft Power Apps
+  - Create and manage Microsoft Power Automate
+  - Implement Microsoft Power Virtual Agents chatbots
+  - Integrate Microsoft Power Apps with other apps and services
+  - Manage solutions
 roles:
-- functional-consultant
+  - functional-consultant
 type: role-based
 products:
-- dynamics-365
-- dynamics-marketing
+  - dynamics-365
+  - dynamics-marketing
 courses:
-- uid: course.pl-200t00
-- uid: course.mb-220t00
+  - uid: course.pl-200t00
+  - uid: course.mb-220t00
 paths:
-- uid: learn-dynamics.get-started-using-common-data-service
-- uid: learn-dynamics.manage-permissions-and-administration-for-common-data-service
-- uid: learn-bizapps.create-powerapps
-- uid: learn-bizapps.create-app-models-business-processes
-- uid: learn-bizapps.create-business-process-flow
-- uid: learn-bizapps.automate-process-using-flow
-- uid: learn-bizapps.get-started-power-automate-buttons
-- uid: learn-bizapps.best-practices-environments
-- uid: learn-bizapps.create-use-analytics-reports-power-bi
-- uid: learn-dynamics.create-relationships-business-rules-calculations-and-rollups-in-common-data-service
-- uid: learn-bizapps.work-power-virtual-agents
-- uid: learn-bizapps.bring-ai
-- uid: learn-bizapps.improve-business-performance-ai-builder
-- uid: learn-dynamics.set-up-dynamics-365-marketing
-- uid: learn-dynamics.work-core-features-marketing
-- uid: learn-dynamics.manage-events-dynamics-marketing
-- uid: learn-dynamics.analyze-marketing-insights
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUj1
+  - uid: learn-dynamics.get-started-using-common-data-service
+  - uid: learn-dynamics.manage-permissions-and-administration-for-common-data-service
+  - uid: learn-bizapps.create-powerapps
+  - uid: learn-bizapps.create-app-models-business-processes
+  - uid: learn-bizapps.create-business-process-flow
+  - uid: learn-bizapps.automate-process-using-flow
+  - uid: learn-bizapps.get-started-power-automate-buttons
+  - uid: learn-bizapps.best-practices-environments
+  - uid: learn-bizapps.create-use-analytics-reports-power-bi
+  - uid: learn-dynamics.create-relationships-business-rules-calculations-and-rollups-in-common-data-service
+  - uid: learn-bizapps.work-power-virtual-agents
+  - uid: learn-bizapps.bring-ai
+  - uid: learn-bizapps.improve-business-performance-ai-builder
+  - uid: learn-dynamics.set-up-dynamics-365-marketing
+  - uid: learn-dynamics.work-core-features-marketing
+  - uid: learn-dynamics.manage-events-dynamics-marketing
+  - uid: learn-dynamics.analyze-marketing-insights
+pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUj1'
 exams:
-- uid: exam.pl-200
-- uid: exam.mb-220
+  - uid: exam.pl-200
+  - uid: exam.mb-220
 resources:
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Reise zur Zertifizierung
-  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C55m
-- title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://aka.ms/TrainingCertDeck
-- title: Lernpfad zur Zertifizierung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjW
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
-  href: ../deals.md
-- title: Zertifizierungsdashboard
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
-  href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: ../help.md
-- title: Teilen Sie Ihre Zertifizierungsbadges.
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
-  href: ../badges.md
+  - title: Zertifizierungsposter
+    description: 'Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL'
+  - title: Reise zur Zertifizierung
+    description: 'Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C55m'
+  - title: Schulungs- und Zertifizierungsleitfaden
+    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+    href: 'https://aka.ms/TrainingCertDeck'
+  - title: Lernpfad zur Zertifizierung
+    description: 'Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjW'
+  - title: Exam Replay
+    description: 'Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.'
+    href: ../deals.md
+  - title: Zertifizierungsdashboard
+    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
+    href: 'https://www.microsoft.com/learning/dashboard.aspx'
+  - title: Unterstützung von Zertifizierungen
+    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+    href: ../help.md
+  - title: Teilen Sie Ihre Zertifizierungsbadges.
+    description: 'Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.'
+    href: ../badges.md
