--- a/learn-certs-pr/exams/dp-900.yml
+++ b/learn-certs-pr/exams/dp-900.yml
@@ -3,86 +3,97 @@ title: Microsoft Azure-Datengrundlagen
 metadata:
   title: 'Examen DP-900: Microsoft Azure Data Fundamentals'
   description: 'Examen DP-900: Microsoft Azure Data Fundamentals'
-  ms.openlocfilehash: 679e2ad477d64dccadd15ca4ef40a6aa81d1ac40
-  ms.sourcegitcommit: e810ce5501e748cb92937addddb4267cde8adbc7
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 01/26/2022
-  ms.locfileid: "137778226"
 uid: exam.dp-900
 displayName: DP-900
-summary: "> [!IMPORTANT]\n> Der Inhalt dieser Prüfung wurde am 25. Oktober 2021 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.\n> \n> HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\nKandidat*innen für dieses Examen sollten über grundlegende Kenntnisse über die wichtigsten Datenkonzepte und deren Implementierung mit Microsoft Azure Data Services verfügen.\n\nDieses Examen richtet sich an Kandidat*innen, die anfangen, mit Daten in der Cloud zu arbeiten.\n\nDie Kandidaten sollten mit den Konzepten relationaler und nicht relationaler Daten sowie mit verschiedenen Arten von Daten-Workloads wie Transaktions- oder Analysedaten vertraut sein.\n\nAzure Data Fundamentals kann verwendet werden, um sich auf andere rollenbasierte Azure-Zertifizierungen wie Azure Database Administrator Associate oder Azure Data Engineer Associate vorzubereiten. Dies ist jedoch keine Voraussetzung für eine dieser Zertifizierungen.\n\nWenn Sie diese Zertifizierungsexamen bestehen, kann dies bei einer ACE-Hochschule angerechnet werden. Weitere Informationen finden Sie unter [ACE-Leistungspunkt für Zertifizierungsprüfungen](/learn/certifications/ace-credit-for-certification-exams)."
+summary: |-
+  > [!IMPORTANT]
+  > Der Inhalt dieser Prüfung wurde am 25. Oktober 2021 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.
+  > 
+  > HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).
+
+  Kandidat*innen für dieses Examen sollten über grundlegende Kenntnisse über die wichtigsten Datenkonzepte und deren Implementierung mit Microsoft Azure Data Services verfügen.
+
+  Dieses Examen richtet sich an Kandidat*innen, die anfangen, mit Daten in der Cloud zu arbeiten.
+
+  Die Kandidaten sollten mit den Konzepten relationaler und nicht relationaler Daten sowie mit verschiedenen Arten von Daten-Workloads wie Transaktions- oder Analysedaten vertraut sein.
+
+  Azure Data Fundamentals kann verwendet werden, um sich auf andere rollenbasierte Azure-Zertifizierungen wie Azure Database Administrator Associate oder Azure Data Engineer Associate vorzubereiten. Dies ist jedoch keine Voraussetzung für eine dieser Zertifizierungen.
+
+  Wenn Sie diese Zertifizierungsexamen bestehen, kann dies bei einer ACE-Hochschule angerechnet werden. Weitere Informationen finden Sie unter [ACE-Leistungspunkt für Zertifizierungsprüfungen](/learn/certifications/ace-credit-for-certification-exams).
+
+  > [!TIP]
+  > [Laden Sie kostenlose Beispielfragen herunter, um sich auf diese Prüfung vorzubereiten.](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWSME5)
 subTitle: 'Beweisen Sie, dass Sie Folgendes erläutern können: grundlegende Datenkonzepte; Arbeiten mit relationalen Daten in Azure; Arbeiten mit nicht relationalen Daten in Azure sowie eine Analyseworkload bei Azure.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wsKZ
-practiceTestUrl: https://www.mindhub.com/dp-900-microsoft-azure-data-fundamentals-microsoft-official-practice-test/p/MU-DP-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wsKZ'
+practiceTestUrl: 'https://www.mindhub.com/dp-900-microsoft-azure-data-fundamentals-microsoft-official-practice-test/p/MU-DP-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice'
 providers:
-- providerType: pearson-vue
-  examUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=DP-900&examname=Exam%20DP-900:%20Microsoft%20Azure%20Data%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-900
-- providerType: certiport
-  examUrl: http://www.certiport.com/locator
+  - providerType: pearson-vue
+    examUrl: 'https://examregistration.microsoft.com/?locale=en-us&examcode=DP-900&examname=Exam%20DP-900:%20Microsoft%20Azure%20Data%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-900'
+  - providerType: certiport
+    examUrl: 'http://www.certiport.com/locator'
 locales:
-- en
-- ja
-- zh-cn
-- ko
-- fr
-- de
-- es
-- pt-br
-- ru
-- id-id
-- ar-sa
-- zh-tw
-- it
+  - en
+  - ja
+  - zh-cn
+  - ko
+  - fr
+  - de
+  - es
+  - pt-br
+  - ru
+  - id-id
+  - ar-sa
+  - zh-tw
+  - it
 levels:
-- beginner
+  - beginner
 skills:
-- The content of this exam was updated on October 25, 2021. Please download the exam skills outline below to see what changed.
-- Describe core data concepts (15-20%)
-- Describe how to work with relational data on Azure (25-30%)
-- Describe how to work with non-relational data on Azure (25-30%)
-- Describe an analytics workload on Azure (25-30%)
+  - 'The content of this exam was updated on October 25, 2021. Please download the exam skills outline below to see what changed.'
+  - Describe core data concepts (15-20%)
+  - Describe how to work with relational data on Azure (25-30%)
+  - Describe how to work with non-relational data on Azure (25-30%)
+  - Describe an analytics workload on Azure (25-30%)
 roles:
-- database-administrator
-- data-analyst
-- data-engineer
-- developer
-- student
+  - database-administrator
+  - data-analyst
+  - data-engineer
+  - developer
+  - student
 products:
-- azure
+  - azure
 courses:
-- uid: course.dp-900t00
+  - uid: course.dp-900t00
 paths:
-- uid: learn.wwl.azure-data-fundamentals-explore-core-data-concepts
-- uid: learn.wwl.azure-data-fundamentals-explore-relational-data
-- uid: learn.wwl.azure-data-fundamentals-explore-non-relational-data
-- uid: learn.wwl.azure-data-fundamentals-explore-data-warehouse-analytics
+  - uid: learn.wwl.azure-data-fundamentals-explore-core-data-concepts
+  - uid: learn.wwl.azure-data-fundamentals-explore-relational-data
+  - uid: learn.wwl.azure-data-fundamentals-explore-non-relational-data
+  - uid: learn.wwl.azure-data-fundamentals-explore-data-warehouse-analytics
 relatedCertifications:
-- related:
-    uid: certification.azure-data-fundamentals
+  - related:
+      uid: certification.azure-data-fundamentals
 resources:
-- title: Reise zur Zertifizierung
-  description: Informieren Sie sich über die nötigen Schritte für eine Zertifizierung als Azure Data Fundamentals und über die zur Verfügung stehenden Ressourcen, die Ihnen bei der Vorbereitung helfen können.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AM8g
-- title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://aka.ms/traincertposter
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
-  href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: ../help.md
-- title: Zertifizierungsdashboard
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
-  href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
-  href: ../certification-exam-policies.md
+  - title: Reise zur Zertifizierung
+    description: 'Informieren Sie sich über die nötigen Schritte für eine Zertifizierung als Azure Data Fundamentals und über die zur Verfügung stehenden Ressourcen, die Ihnen bei der Vorbereitung helfen können.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AM8g'
+  - title: Schulungs- und Zertifizierungsleitfaden
+    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+    href: 'https://aka.ms/TrainingCertDeck'
+  - title: Zertifizierungsposter
+    description: 'Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.'
+    href: 'https://aka.ms/traincertposter'
+  - title: Exam Replay
+    description: 'Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.'
+    href: ../deals.md
+  - title: Unterstützung bei Zertifizierungsprüfungen
+    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+    href: ../help.md
+  - title: Zertifizierungsdashboard
+    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
+    href: 'https://www.microsoft.com/learning/dashboard.aspx'
+  - title: Unterkünfte anfordern
+    description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+    href: ../request-accommodations.md
+  - title: Prüfungsrichtlinien und FAQs
+    description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+    href: ../certification-exam-policies.md
