--- a/learn-certs-pr/exams/mb-220.yml
+++ b/learn-certs-pr/exams/mb-220.yml
@@ -3,85 +3,67 @@ title: Microsoft Dynamics 365 Marketing
 metadata:
   title: 'Examen MB-220: Microsoft Dynamics 365 Marketing'
   description: 'Examen MB-220: Microsoft Dynamics 365 Marketing'
-  ms.openlocfilehash: 158889963466df4d597ba734631eef0fdbb5203a
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137657421"
 uid: exam.mb-220
 displayName: MB-220
-summary: >-
-  > [!IMPORTANT]
-
-  > Der Inhalt dieser Prüfung wurde am 9. Juli 2021 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.
-
-
-  Kandidat*innen für dieses Examen sind Dynamics 365 Marketing Functional Consultants. Kandidaten sind dafür verantwortlich, Lösungen zu implementieren, die Leads gewinnen und konvertieren, Markenbekanntheit aufzubauen, Omnichannel-Messaging zu standardisieren und Marketinginformationen zu liefern.
-
-
-  Kandidaten sind verantwortlich für die Konfiguration und Erweiterung der Kernmarketinganwendung, die E-Mail-Marketing, Einrichtung, interaktive Kundenreisen, Leads mit personalisierten Erfahrungen, LinkedIn-Integration, Events, Umfragen, Landing Pages, Segmentierung und Scoring sowie die Einhaltung der Allgemeinen Datenschutzverordnung (GDPR) umfasst.
-
-
-  Die Kandidat*innen sollten über bestimmte Kenntnisse zu Marketingprinzipien und der Rolle des Marketings in Bezug auf die Dynamics 365-Anwendungssuite verfügen, einschließlich der Integration mit Dynamics 365- und Microsoft 365-Anwendungen. Kandidaten sollten die Terminologie der Branche, Prioritäten, gemeinsame Initiativen, Standards, Methoden und bewährte Verfahren verstehen.
+summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieser Prüfung wird am 28.\_Februar\_2022 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.\n>\n> Notwendige Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\n<br/>\nKandidat*innen für dieses Examen sind Dynamics\_365 Marketing Functional Consultants. Kandidaten sind dafür verantwortlich, Lösungen zu implementieren, die Leads gewinnen und konvertieren, Markenbekanntheit aufzubauen, Omnichannel-Messaging zu standardisieren und Marketinginformationen zu liefern.\n\nKandidaten sind verantwortlich für die Konfiguration und Erweiterung der Kernmarketinganwendung, die E-Mail-Marketing, Einrichtung, interaktive Kundenreisen, Leads mit personalisierten Erfahrungen, LinkedIn-Integration, Events, Umfragen, Landing Pages, Segmentierung und Scoring sowie die Einhaltung der Allgemeinen Datenschutzverordnung (GDPR) umfasst.\n\nDie Kandidat*innen sollten über bestimmte Kenntnisse zu Marketingprinzipien und der Rolle des Marketings in Bezug auf die Dynamics 365-Anwendungssuite verfügen, einschließlich der Integration mit Dynamics 365- und Microsoft 365-Anwendungen. Kandidaten sollten die Terminologie der Branche, Prioritäten, gemeinsame Initiativen, Standards, Methoden und bewährte Verfahren verstehen."
 subTitle: 'Dieses Examen misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Konfigurieren von Marketinganwendungen, Verwalten von Segmenten und Listen, Erstellen und Verwalten von Marketingformularen und -seiten, Verwalten von Leads, Kontakten und Accounts, Erstellen und Verwalten von Marketing-E-Mails, Verwalten von Customer Journeys, Verwalten von Veranstaltungen und Webinaren sowie Konfigurieren und Analysieren von Dynamics 365 Custom Voice.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjQ
-practiceTestUrl: https://www.mindhub.com/mb-220-microsoft-dynamics-365-marketing-microsoft-official-practice-test/p/MU-MB-220?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MB-220&examname=Exam%20MB-220:%20Microsoft%20Dynamics%20365%20for%20Marketing&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-220
+pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjQ'
+practiceTestUrl: 'https://www.mindhub.com/mb-220-microsoft-dynamics-365-marketing-microsoft-official-practice-test/p/MU-MB-220?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice'
+scheduleExamUrl: 'https://examregistration.microsoft.com/?locale=en-us&examcode=MB-220&examname=Exam%20MB-220:%20Microsoft%20Dynamics%20365%20for%20Marketing&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-220'
 locales:
-- en
+  - en
 levels:
-- intermediate
+  - intermediate
 skills:
-- The content of this exam was updated on July 9, 2021. Please download the exam skills outline below to see what changed.
-- Configure marketing applications (20-25%)
-- Manage segments and lists (10-15%)
-- Create and manage marketing forms and pages (10-15%)
-- Manage leads, contacts, and accounts (5-10%)
-- Create and manage marketing emails (5-10%)
-- Manage customer journeys (10-15%)
-- Manage events and webinars (10-15%)
-- Configure Dynamics 365 Customer Voice (10-15%)
+  - 'The English language version of this exam will be updated on February 28, 2022. Please download the exam skills outline below to see what’s changing.'
+  - Configure marketing applications (20-25%)
+  - Manage segments and lists (10-15%)
+  - Create and manage marketing forms and pages (10-15%)
+  - 'Manage leads, contacts, and accounts (5-10%)'
+  - Create and manage marketing emails (5-10%)
+  - Manage customer journeys (10-15%)
+  - Manage events and webinars (10-15%)
+  - Configure Dynamics 365 Customer Voice (10-15%)
 roles:
-- functional-consultant
+  - functional-consultant
 products:
-- dynamics-365
-- dynamics-marketing
+  - dynamics-365
+  - dynamics-marketing
 exams:
-- uid: exam.pl-200
+  - uid: exam.pl-200
 courses:
-- uid: course.mb-220t00
+  - uid: course.mb-220t00
 paths:
-- uid: learn-dynamics.set-up-dynamics-365-marketing
-- uid: learn-dynamics.work-core-features-marketing
-- uid: learn-dynamics.manage-events-dynamics-marketing
-- uid: learn-dynamics.analyze-marketing-insights
+  - uid: learn-dynamics.set-up-dynamics-365-marketing
+  - uid: learn-dynamics.work-core-features-marketing
+  - uid: learn-dynamics.manage-events-dynamics-marketing
+  - uid: learn-dynamics.analyze-marketing-insights
 relatedCertifications:
-- related:
-    uid: certification.d365-functional-consultant-marketing
+  - related:
+      uid: certification.d365-functional-consultant-marketing
 resources:
-- title: Lernpfad zur Zertifizierung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjW
-- title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
-  href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: ../help.md
-- title: Zertifizierungsdashboard
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
-  href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
-  href: ../certification-exam-policies.md
+  - title: Lernpfad zur Zertifizierung
+    description: 'Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjW'
+  - title: Schulungs- und Zertifizierungsleitfaden
+    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+    href: 'https://aka.ms/TrainingCertDeck'
+  - title: Zertifizierungsposter
+    description: 'Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL'
+  - title: Exam Replay
+    description: 'Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.'
+    href: ../deals.md
+  - title: Unterstützung bei Zertifizierungsprüfungen
+    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+    href: ../help.md
+  - title: Zertifizierungsdashboard
+    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
+    href: 'https://www.microsoft.com/learning/dashboard.aspx'
+  - title: Unterkünfte anfordern
+    description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+    href: ../request-accommodations.md
+  - title: Prüfungsrichtlinien und FAQs
+    description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+    href: ../certification-exam-policies.md
