--- a/learn-certs-pr/exams/mb-310.yml
+++ b/learn-certs-pr/exams/mb-310.yml
@@ -1,76 +1,70 @@
 ### YamlMime:Examination
-title: Microsoft Dynamics 365 Finance
+title: Microsoft Dynamics 365 Finance Functional Consultant
 metadata:
-  title: 'MB-310: Microsoft Dynamics 365 Finance'
-  description: 'MB-310: Microsoft Dynamics 365 Finance'
-  ms.openlocfilehash: 9dd6640da024881c7cb8bbaff8e28227d162b252
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137657091"
+  title: 'MB-310: Microsoft Dynamics 365 Finance Functional Consultant'
+  description: 'MB-310: Microsoft Dynamics 365 Finance Functional Consultant'
 uid: exam.mb-310
 displayName: MB-310
-summary: "> [!IMPORTANT]\n> Der Inhalt dieser Prüfung wurde am 27. August 2021 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.\n> \n> HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\nKandidat*innen für dieses Examen analysieren Geschäftsanforderungen und setzen diese Anforderungen in vollständig realisierte Geschäftsprozesse und Lösungen um, die empfohlene Praktiken der Branche implementieren.  Sie verfügen über ein grundlegendes Verständnis der Buchhaltung und ein vertieftes Verständnis der Finanzvorgänge in Bezug auf Kernfinanzen, Fertigung, Einzelhandel und Vorgänge im Supply Chain Management.\n<br/>\n\nKandidat*innen für dieses Examen spezialisieren sich in der Regel auf einen oder mehrere Funktionsgruppen von Dynamics 365 Finance, darunter Kernfinanzwesen, Hauptbuch, Steuern, Kostenrechnung, Anlagevermögen, Budgetierung, Umsatzrealisierung, Konsolidierung, Kredit und Inkasso, Bargeld- und Bankmanagement, Ausgabenmanagement sowie Projektmanagement und Buchhaltung. Sie verstehen die Zusammenhänge zwischen dem Finanzwesen und der Produktion, dem Einzelhandel und dem Supply Chain Management."
+summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieser Prüfung wurde am 27.\_August\_2021 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.\n> \n> HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\n<br/>\nKandidat*innen für dieses Examen analysieren Geschäftsanforderungen und setzen diese Anforderungen in vollständig realisierte Geschäftsprozesse und Lösungen um, die empfohlene Praktiken der Branche implementieren.  Sie verfügen über ein grundlegendes Verständnis der Buchhaltung und ein vertieftes Verständnis der Finanzvorgänge in Bezug auf Kernfinanzen, Fertigung, Einzelhandel und Vorgänge im Supply Chain Management.\n<br/>\n\nKandidat*innen für dieses Examen spezialisieren sich in der Regel auf einen oder mehrere Funktionsgruppen von Dynamics\_365 Finance, darunter Kernfinanzwesen, Hauptbuch, Steuern, Kostenrechnung, Anlagevermögen, Budgetierung, Umsatzrealisierung, Konsolidierung, Kredit und Inkasso, Bargeld- und Bankmanagement, Ausgabenmanagement sowie Projektmanagement und Buchhaltung. Sie verstehen die Zusammenhänge zwischen dem Finanzwesen und der Produktion, dem Einzelhandel und dem Supply Chain Management."
 subTitle: 'In diesem Examen wird Ihre Fähigkeit geprüft, die folgenden technischen Aufgaben zu bewältigen: Einrichten und Konfigurieren der Finanzverwaltung, Implementieren und Verwalten von Kreditoren und Ausgaben, Implementieren von Debitoren, Krediten, Inkasso und Umsatzrealisierung, Verwalten der Budgetierung sowie Verwalten von Anlagevermögen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHU
-practiceTestUrl: https://www.mindhub.com/p/MU-MB-310?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MB-310&examname=Exam%20MB-310:%20Microsoft%20Dynamics%20365%20for%20Finance%20and%20Operations,%20Financials&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-310
+pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHU'
+practiceTestUrl: 'https://www.mindhub.com/p/MU-MB-310?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice'
+scheduleExamUrl: 'https://examregistration.microsoft.com/?locale=en-us&examcode=MB-310&examname=Exam%20MB-310:%20Microsoft%20Dynamics%20365%20for%20Finance%20and%20Operations,%20Financials&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-310'
 locales:
-- en
+  - en
 levels:
-- intermediate
+  - intermediate
 skills:
-- The content of this exam was updated on August 27, 2021. Please download the exam skills outline below to see what changed.
-- Set up and configure financial management (40-45%)
-- Implement accounts receivable, credit, collections, and revenue recognition (15-20%)
-- Implement and manage accounts payable and expenses (10-15%)
-- Manage budgeting (10-15%)
-- Manage fixed assets (10-15%)
+  - 'The content of this exam was updated on August 27, 2021. Please download the exam skills outline below to see what changed.'
+  - Set up and configure financial management (40-45%)
+  - 'Implement accounts receivable, credit, collections, and revenue recognition (15-20%)'
+  - Implement and manage accounts payable and expenses (10-15%)
+  - Manage budgeting (10-15%)
+  - Manage fixed assets (10-15%)
 roles:
-- functional-consultant
+  - functional-consultant
 products:
-- dynamics-365
-- dynamics-finance
+  - dynamics-365
+  - dynamics-finance
 exams:
-- uid: exam.mb-300
+  - uid: exam.mb-300
 courses:
-- uid: course.mb-310t00
+  - uid: course.mb-310t00
 paths:
-- uid: learn-dynamics.configure-use-general-ledger-dynamics-365-finance-ops
-- uid: learn-dynamics.configure-use-cash-bank-management-tax-d365-finance-ops
-- uid: learn-dynamics.work-with-accounts-payable-in-dynamics-365-for-finance-and-ops
-- uid: learn-dynamics.work-accounts-receivable-d365-finance-ops
-- uid: learn-dynamics.configure-use-budgeting-d365-finance-ops
-- uid: learn-dynamics.configure-manage-fixed-assets-d365-finance-ops
-- uid: learn-dynamics.get-started-cost-accounting-supply-chains-dyn365-finance
-- uid: learn-dynamics.work-expense-management
+  - uid: learn-dynamics.configure-use-general-ledger-dynamics-365-finance-ops
+  - uid: learn-dynamics.configure-use-cash-bank-management-tax-d365-finance-ops
+  - uid: learn-dynamics.work-with-accounts-payable-in-dynamics-365-for-finance-and-ops
+  - uid: learn-dynamics.work-accounts-receivable-d365-finance-ops
+  - uid: learn-dynamics.configure-use-budgeting-d365-finance-ops
+  - uid: learn-dynamics.configure-manage-fixed-assets-d365-finance-ops
+  - uid: learn-dynamics.get-started-cost-accounting-supply-chains-dyn365-finance
+  - uid: learn-dynamics.work-expense-management
 relatedCertifications:
-- related:
-    uid: certification.d365-functional-consultant-financials
+  - related:
+      uid: certification.d365-functional-consultant-financials
 resources:
-- title: Lernpfad zur Zertifizierung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C56Y
-- title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
-  href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: ../help.md
-- title: Zertifizierungsdashboard
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
-  href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
-  href: ../certification-exam-policies.md
+  - title: Lernpfad zur Zertifizierung
+    description: 'Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C56Y'
+  - title: Schulungs- und Zertifizierungsleitfaden
+    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+    href: 'https://aka.ms/TrainingCertDeck'
+  - title: Zertifizierungsposter
+    description: 'Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL'
+  - title: Exam Replay
+    description: 'Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.'
+    href: ../deals.md
+  - title: Unterstützung bei Zertifizierungsprüfungen
+    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+    href: ../help.md
+  - title: Zertifizierungsdashboard
+    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
+    href: 'https://www.microsoft.com/learning/dashboard.aspx'
+  - title: Unterkünfte anfordern
+    description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+    href: ../request-accommodations.md
+  - title: Prüfungsrichtlinien und FAQs
+    description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+    href: ../certification-exam-policies.md
