--- a/learn-certs-pr/exams/ms-900.yml
+++ b/learn-certs-pr/exams/ms-900.yml
@@ -1,82 +1,76 @@
 ### YamlMime:Examination
-title: Grundlagen zu Microsoft 365
+title: "Grundlagen zu Microsoft\_365"
 metadata:
   title: 'Examen MS-900: Microsoft 365 Fundamentals'
   description: 'Examen MS-900: Microsoft 365 Fundamentals'
-  ms.openlocfilehash: 69a85b702068df20010ac32c3698ee34d538f538
-  ms.sourcegitcommit: e810ce5501e748cb92937addddb4267cde8adbc7
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 01/26/2022
-  ms.locfileid: "137778248"
 uid: exam.ms-900
 displayName: MS-900
-summary: "> [!IMPORTANT]\n> Der Inhalt dieser Prüfung wurde am 25. Oktober 2021 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.\n> \n> \n> HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\n<br/>  \nDiese Prüfung ist für Kandidaten, die Ihre grundlegenden Kenntnisse zu Überlegungen und Vorteilen von der Einbindung von Cloud Diensten im allgemeinen und des Software as a Service (SaaS) Modells unter Beweis stellen möchten. Die Prüfung umfasst auch Kenntnisse über die verfügbaren Optionen und Vorteile einer Implementierung von Microsoft 365 Cloud- Service-Angeboten.\n\n<br/>\nKandidaten sollten über die erforderlichen Kenntnisse verfügen, um Lösungen zu empfehlen, die sich mit allgemeinen organisatorischen IT-Herausforderungen befassen, und um Microsoft 365-Lösungen von der Konkurrenz auf dem Markt abzuheben. Die Kandidaten sollten auch über grundlegende Kenntnisse der Angebote, Optimierung der Lizenzierung im Hinblick auf Kosteneffizienz und Supportoptionen für Unternehmen verfügen.\n\nKandidaten sollten in der Lage sein, zwischen den Services und Produkten von Microsoft (Microsoft 365, Azure und Dynamics 365) zu unterscheiden.\n\nWenn Sie diese Zertifizierungsexamen bestehen, kann dies bei einer ACE-Hochschule angerechnet werden. Weitere Informationen finden Sie unter [ACE-Leistungspunkt für Zertifizierungsprüfungen](/learn/certifications/ace-credit-for-certification-exams)."
-subTitle: Stellen Sie unter Beweis, dass Sie Cloud-Konzepte, Microsoft 365-Dienste und -Konzepte, Sicherheit, Compliance, Datenschutz und Vertrauen in Microsoft 365 sowie Microsoft 365 Preise und Support verstehen.
+summary: "> [!NOTE]\n> Das Produktteam hat vor Kurzem die Umbenennung mehrerer Technologien abgeschlossen, die in dieser Prüfung eine Rolle spielen. Zu den Änderungen zählt Folgendes:\n> - Der Windows Virtual Desktop heißt jetzt Azure Virtual Desktop\n> - Workplace Analytics heißt jetzt Viva Insights\n> - Cloud App Security heißt jetzt Microsoft Defender for Cloud Apps\n> - Microsoft 365 Security Center heißt jetzt Microsoft 365 Defender-Portal\n> \n> Diese Änderungen werden seit dem 28.\_Januar\_2022 in der Prüfung berücksichtigt.\n\n> [!IMPORTANT]\n> Der Inhalt dieser Prüfung wurde am 25. Oktober 2021 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.\n> \n> HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\n<br/>  \nDiese Prüfung ist für Kandidaten, die Ihre grundlegenden Kenntnisse zu Überlegungen und Vorteilen von der Einbindung von Cloud Diensten im allgemeinen und des Software as a Service (SaaS) Modells unter Beweis stellen möchten. Die Prüfung umfasst auch Kenntnisse über die verfügbaren Optionen und Vorteile einer Implementierung von Microsoft 365 Cloud- Service-Angeboten.\n\n<br/>\nKandidaten sollten über die erforderlichen Kenntnisse verfügen, um Lösungen zu empfehlen, die sich mit allgemeinen organisatorischen IT-Herausforderungen befassen, und um Microsoft 365-Lösungen von der Konkurrenz auf dem Markt abzuheben. Die Kandidaten sollten auch über grundlegende Kenntnisse der Angebote, Optimierung der Lizenzierung im Hinblick auf Kosteneffizienz und Supportoptionen für Unternehmen verfügen.\n\nKandidaten sollten in der Lage sein, zwischen den Services und Produkten von Microsoft (Microsoft 365, Azure und Dynamics 365) zu unterscheiden.\n\nWenn Sie diese Zertifizierungsexamen bestehen, kann dies bei einer ACE-Hochschule angerechnet werden. Weitere Informationen finden Sie unter [ACE-Leistungspunkt für Zertifizierungsprüfungen](/learn/certifications/ace-credit-for-certification-exams).\n\n> [!TIP]\n> [Laden Sie kostenlose Beispielfragen herunter, um sich auf diese Prüfung vorzubereiten.](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWSOFm)"
+subTitle: 'Stellen Sie unter Beweis, dass Sie Cloud-Konzepte, Microsoft 365-Dienste und -Konzepte, Sicherheit, Compliance, Datenschutz und Vertrauen in Microsoft 365 sowie Microsoft 365 Preise und Support verstehen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVw
-practiceTestUrl: https://www.mindhub.com/p/MU-MS-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVw'
+practiceTestUrl: 'https://www.mindhub.com/p/MU-MS-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice'
 locales:
-- en
-- ja
-- es
-- de
-- zh-cn
-- fr
-- ko
-- pt-br
-- ar-sa
-- ru
-- zh-tw
-- it
+  - en
+  - ja
+  - es
+  - de
+  - zh-cn
+  - fr
+  - ko
+  - pt-br
+  - ar-sa
+  - ru
+  - zh-tw
+  - it
 providers:
-- providerType: pearson-vue
-  examUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MS-900&examname=Exam%20MS-900:%20Microsoft%20365%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-900
-- providerType: certiport
-  examUrl: http://www.certiport.com/locator
+  - providerType: pearson-vue
+    examUrl: 'https://examregistration.microsoft.com/?locale=en-us&examcode=MS-900&examname=Exam%20MS-900:%20Microsoft%20365%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-900'
+  - providerType: certiport
+    examUrl: 'http://www.certiport.com/locator'
 levels:
-- beginner
+  - beginner
 skills:
-- The content of this exam was updated on October 25, 2021. Please download the exam skills outline below to see what changed.
-- Describe cloud concepts (10-15%)
-- Describe core Microsoft 365 services and concepts (30-35%)
-- Explain security, compliance, privacy, and trust in Microsoft 365 (30-35%)
-- Describe Microsoft 365 pricing and support (20-25%)
+  - 'The content of this exam was updated on October 25, 2021. Please download the exam skills outline below to see what changed.'
+  - Describe cloud concepts (10-15%)
+  - Describe core Microsoft 365 services and concepts (30-35%)
+  - 'Explain security, compliance, privacy, and trust in Microsoft 365 (30-35%)'
+  - Describe Microsoft 365 pricing and support (20-25%)
 roles:
-- administrator
+  - administrator
 products:
-- m365
-- windows
-- office-365
+  - m365
+  - windows
+  - office-365
 courses:
-- uid: course.ms-900t01
+  - uid: course.ms-900t01
 paths:
-- uid: learn.wwl.m365-productivity-teamwork-solutions
-- uid: learn.wwl.m365-business-management-solutions
-- uid: learn.wwl.m365-security-compliance-capabilities
-- uid: learn.wwl.m365-licensing-service-support
+  - uid: learn.wwl.m365-productivity-teamwork-solutions
+  - uid: learn.wwl.m365-business-management-solutions
+  - uid: learn.wwl.m365-security-compliance-capabilities
+  - uid: learn.wwl.m365-licensing-service-support
 relatedCertifications:
-- related:
-    uid: certification.microsoft-365-fundamentals
+  - related:
+      uid: certification.microsoft-365-fundamentals
 resources:
-- title: Lernpfad zur Zertifizirung
-  description: 'Entdecken Sie Schulungsressourcen, um die Zertifizierung „Microsoft Certified: Fundamentals“ zu erlangen.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35svT
-- title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://aka.ms/traincertposter
-- title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: ../help.md
-- title: Zertifizierungsdashboard
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
-  href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
-  href: ../certification-exam-policies.md
+  - title: Lernpfad zur Zertifizirung
+    description: 'Entdecken Sie Schulungsressourcen, um die Zertifizierung „Microsoft Certified: Fundamentals“ zu erlangen.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35svT'
+  - title: Schulungs- und Zertifizierungsleitfaden
+    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+    href: 'https://aka.ms/TrainingCertDeck'
+  - title: Zertifizierungsposter
+    description: 'Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.'
+    href: 'https://aka.ms/traincertposter'
+  - title: Unterstützung bei Zertifizierungsprüfungen
+    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+    href: ../help.md
+  - title: Zertifizierungsdashboard
+    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
+    href: 'https://www.microsoft.com/learning/dashboard.aspx'
+  - title: Unterkünfte anfordern
+    description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+    href: ../request-accommodations.md
+  - title: Prüfungsrichtlinien und FAQs
+    description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+    href: ../certification-exam-policies.md
