--- a/learn-certs-pr/exams/sc-300.yml
+++ b/learn-certs-pr/exams/sc-300.yml
@@ -3,79 +3,73 @@ title: Microsoft Identity and Access Administrator
 metadata:
   title: 'Prüfung SC-300: Microsoft Identity and Access Administrator'
   description: 'Prüfung SC-300: Microsoft Identity and Access Administrator'
-  ms.openlocfilehash: 46da9a1b9799563567c94d1fa4d0def96d0b1a79
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137658686"
 uid: exam.sc-300
 displayName: SC-300
-summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieser Prüfung wird am 28. Januar 2022 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.\n> \n> HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\nDer*Die Microsoft Identity and Access Administrator entwirft, implementiert und betreibt die Systeme zur Identitäts- und Zugriffsverwaltung einer Organisation mithilfe von Azure Active Directory (Azure AD). Er*Sie verwaltet Aufgaben wie das Bereitstellen sicherer Authentifizierungs- und Autorisierungszugriffe auf Unternehmensanwendungen. Der*Die Administrator*in bietet nahtlose Benutzerumgebungen und Self-Service-Verwaltungsfunktionen für alle Benutzer*innen. Der adaptive Zugriff und die Governance sind Kernelemente der Rolle. Diese Rolle ist auch für die Problembehandlung, das Überwachen und die Berichterstellung für die Identitäts- und Zugriffsumgebung verantwortlich.\n\nDer*Die Identity and Access Administrator kann eine einzelne Person oder ein Mitglied eines größeren Teams sein. Diese Rolle arbeitet mit vielen anderen Rollen in der Organisation zusammen, um strategische Identitätsprojekte zum Modernisieren von Identitätslösungen zu fördern sowie Hybrid-Identitätslösungen und Identitätsgovernance zu implementieren."
+summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieser Prüfung wurde am 28.\_Januar\_2022 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.\n> \n> Notwendige Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\n<br/>\nDer*Die Microsoft Identity and Access Administrator entwirft, implementiert und betreibt die Systeme zur Identitäts- und Zugriffsverwaltung einer Organisation mithilfe von Azure Active Directory (Azure AD). Er*Sie verwaltet Aufgaben wie das Bereitstellen sicherer Authentifizierungs- und Autorisierungszugriffe auf Unternehmensanwendungen. Der*Die Administrator*in bietet nahtlose Benutzerumgebungen und Self-Service-Verwaltungsfunktionen für alle Benutzer*innen. Der adaptive Zugriff und die Governance sind Kernelemente der Rolle. Diese Rolle ist auch für die Problembehandlung, das Überwachen und die Berichterstellung für die Identitäts- und Zugriffsumgebung verantwortlich.\n\nDer*Die Identity and Access Administrator kann eine einzelne Person oder ein Mitglied eines größeren Teams sein. Diese Rolle arbeitet mit vielen anderen Rollen in der Organisation zusammen, um strategische Identitätsprojekte zum Modernisieren von Identitätslösungen zu fördern sowie Hybrid-Identitätslösungen und Identitätsgovernance zu implementieren."
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Implementieren einer Identitätsverwaltungslösung, Implementieren einer Lösung für die Authentifizierungs- und Zugriffsverwaltung, Implementieren der Zugriffsverwaltung für Apps sowie Planen und Implementieren einer Strategie für Identitätsgovernance.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Myp5
-practiceTestUrl: https://www.mindhub.com/p/MU-SC-300?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=SC-300&examname=Exam%20SC-300:%20Microsoft%20Identity%20and%20Access%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fsc-300
+pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Myp5'
+practiceTestUrl: 'https://www.mindhub.com/p/MU-SC-300?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice'
+scheduleExamUrl: 'https://examregistration.microsoft.com/?locale=en-us&examcode=SC-300&examname=Exam%20SC-300:%20Microsoft%20Identity%20and%20Access%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fsc-300'
 locales:
-- en
-- ja
-- zh-cn
-- ko
-- fr
-- es
-- pt-br
-- ru
-- ar-sa
-- de
-- zh-tw
-- it
+  - en
+  - ja
+  - zh-cn
+  - ko
+  - fr
+  - es
+  - pt-br
+  - ru
+  - ar-sa
+  - de
+  - zh-tw
+  - it
 levels:
-- intermediate
+  - intermediate
 skills:
-- The English language version of this exam will be updated on January 28, 2022. Please download the exam skills outline below to see what’s changing.
-- Implement an identity management solution (25-30%)
-- Implement an authentication and access management solution (25-30%)
-- Implement access management for apps (10-15%)
-- Plan and implement an identity governance strategy (25-30%)
+  - 'The English language version of this exam was updated on January 28, 2022. Please download the exam skills outline below to see what changed.'
+  - Implement an identity management solution (25-30%)
+  - Implement an authentication and access management solution (25-30%)
+  - Implement access management for apps (10-15%)
+  - Plan and implement an identity governance strategy (25-30%)
 roles:
-- administrator
-- identity-access-admin
-- security-engineer
+  - administrator
+  - identity-access-admin
+  - security-engineer
 products:
-- azure
-- azure-active-directory
-- azure-log-analytics
-- azure-sentinel
+  - azure
+  - azure-active-directory
+  - azure-log-analytics
+  - azure-sentinel
 courses:
-- uid: course.sc-300t00
+  - uid: course.sc-300t00
 paths:
-- uid: learn.wwl.implement-identity-management-solution
-- uid: learn.wwl.implement-authentication-access-management-solution
-- uid: learn.wwl.implement-access-management-for-apps
-- uid: learn.wwl.plan-implement-identity-governance-strategy
+  - uid: learn.wwl.implement-identity-management-solution
+  - uid: learn.wwl.implement-authentication-access-management-solution
+  - uid: learn.wwl.implement-access-management-for-apps
+  - uid: learn.wwl.plan-implement-identity-governance-strategy
 relatedCertifications:
-- related:
-    uid: certification.identity-and-access-administrator
+  - related:
+      uid: certification.identity-and-access-administrator
 resources:
-- title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
-  href: https://aka.ms/traincertposter
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
-  href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: ../help.md
-- title: Zertifizierungsdashboard
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
-  href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
-  href: ../certification-exam-policies.md
+  - title: Schulungs- und Zertifizierungsleitfaden
+    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+    href: 'https://aka.ms/TrainingCertDeck'
+  - title: Zertifizierungsposter
+    description: 'Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.'
+    href: 'https://aka.ms/traincertposter'
+  - title: Exam Replay
+    description: 'Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.'
+    href: ../deals.md
+  - title: Unterstützung bei Zertifizierungsprüfungen
+    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+    href: ../help.md
+  - title: Zertifizierungsdashboard
+    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
+    href: 'https://www.microsoft.com/learning/dashboard.aspx'
+  - title: Unterkünfte anfordern
+    description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+    href: ../request-accommodations.md
+  - title: Prüfungsrichtlinien und FAQs
+    description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+    href: ../certification-exam-policies.md
