--- a/learn-certs-pr/exams/sc-400.yml
+++ b/learn-certs-pr/exams/sc-400.yml
@@ -3,78 +3,72 @@ title: Microsoft Information Protection-Administrator
 metadata:
   title: 'Prüfung SC-400: Microsoft Information Protection-Administrator'
   description: 'Prüfung SC-400: Microsoft Information Protection-Administrator'
-  ms.openlocfilehash: 9ed8d73d198aeb8f34561e08fac0356e7940c1ef
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137659335"
 uid: exam.sc-400
 displayName: SC-400
-summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieser Prüfung wird am 28. Januar 2022 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.\n> \n> HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\nDer*Die Microsoft Information Protection-Administrator*in plant und implementiert Kontrollen, die die Complianceanforderungen der Organisation erfüllen. Diese Person ist für die Umsetzung von Anforderungen und Compliancekontrollen in die technische Implementierung verantwortlich. Sie unterstützen die Verantwortlichen für die Organisationssteuerung dabei, die Complianceanforderungen dauerhaft zu erfüllen.\n\nSie arbeiten mit IT-Mitarbeiter*innen (IT), den Verantwortlichen für Geschäftsanwendungen, der Personalabteilung und juristischen Stakeholder*innen zusammen, um Technologien zur Unterstützung von Richtlinien und Kontrollen zu implementieren, die zur ausreichenden Erfüllung gesetzlicher Anforderungen für ihre Organisation erforderlich sind. Sie arbeiten auch mit Führungskräften im Bereich Compliance und Sicherheit zusammen, z. B. einem*einer Chief Compliance Officer und einem*einer Sicherheitsbeauftragten, um die gesamte Bandbreite des damit verbundenen Unternehmensrisikos zu bewerten und diese Richtlinien gemeinsam zu entwickeln.\n\nDiese Person definiert die anwendbaren Anforderungen und testet IT-Prozesse und -Vorgänge anhand dieser Richtlinien und Kontrollen. Sie sind für das Erstellen von Richtlinien und Regeln für die Bereiche Inhaltsklassifizierung, Verhinderung von Datenverlust, Governance und Schutz verantwortlich."
+summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieser Prüfung wurde am 28.\_Januar\_2022 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.\n> \n> Notwendige Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\n<br/>\nDer*Die Microsoft Information Protection-Administrator*in plant und implementiert Kontrollen, die die Complianceanforderungen der Organisation erfüllen. Diese Person ist für die Umsetzung von Anforderungen und Compliancekontrollen in die technische Implementierung verantwortlich. Sie unterstützen die Verantwortlichen für die Organisationssteuerung dabei, die Complianceanforderungen dauerhaft zu erfüllen.\n\nSie arbeiten mit IT-Mitarbeiter*innen (IT), den Verantwortlichen für Geschäftsanwendungen, der Personalabteilung und juristischen Stakeholder*innen zusammen, um Technologien zur Unterstützung von Richtlinien und Kontrollen zu implementieren, die zur ausreichenden Erfüllung gesetzlicher Anforderungen für ihre Organisation erforderlich sind. Sie arbeiten auch mit Führungskräften im Bereich Compliance und Sicherheit zusammen, z. B. einem*einer Chief Compliance Officer und einem*einer Sicherheitsbeauftragten, um die gesamte Bandbreite des damit verbundenen Unternehmensrisikos zu bewerten und diese Richtlinien gemeinsam zu entwickeln.\n\nDiese Person definiert die anwendbaren Anforderungen und testet IT-Prozesse und -Vorgänge anhand dieser Richtlinien und Kontrollen. Sie sind für das Erstellen von Richtlinien und Regeln für die Bereiche Inhaltsklassifizierung, Verhinderung von Datenverlust, Governance und Schutz verantwortlich."
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Implementieren von Information Protection, Implementieren der Verhinderung von Datenverlust und Implementieren von Informationsgovernance.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Mr80
-practiceTestUrl: https://in.mindhub.com/sc-400-microsoft-information-protection-administrator-microsoft-official-practice-test/p/MU-SC-400?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=SC-400&examname=Exam%20SC-400:%20Microsoft%20Information%20Protection%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fsc-400
+pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Mr80'
+practiceTestUrl: 'https://in.mindhub.com/sc-400-microsoft-information-protection-administrator-microsoft-official-practice-test/p/MU-SC-400?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice'
+scheduleExamUrl: 'https://examregistration.microsoft.com/?locale=en-us&examcode=SC-400&examname=Exam%20SC-400:%20Microsoft%20Information%20Protection%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fsc-400'
 locales:
-- en
-- zh-cn
-- ja
-- ko
-- de
-- fr
-- es
-- pt-br
-- ru
-- ar-sa
-- zh-tw
-- it
+  - en
+  - zh-cn
+  - ja
+  - ko
+  - de
+  - fr
+  - es
+  - pt-br
+  - ru
+  - ar-sa
+  - zh-tw
+  - it
 levels:
-- intermediate
+  - intermediate
 skills:
-- The English language version of this exam will be updated on January 28, 2022. Please download the exam skills outline below to see what’s changing.
-- Implement information protection (35-40%)
-- Implement data loss prevention (30-35%)
-- Implement information governance (25-30%)
+  - 'The English language version of this exam was updated on January 28, 2022. Please download the exam skills outline below to see what changed.'
+  - Implement information protection (35-40%)
+  - Implement data loss prevention (30-35%)
+  - Implement information governance (25-30%)
 roles:
-- administrator
-- ip-admin
-- risk-practitioner
-- security-engineer
+  - administrator
+  - ip-admin
+  - risk-practitioner
+  - security-engineer
 products:
-- office-teams
-- office-sp
-- m365
-- m365-ems-cloud-app-security
+  - office-teams
+  - office-sp
+  - m365
+  - m365-ems-cloud-app-security
 courses:
-- uid: course.sc-400t00
+  - uid: course.sc-400t00
 paths:
-- uid: learn.wwl.implement-information-protection
-- uid: learn.wwl.implement-data-loss-prevention
-- uid: learn.wwl.implement-information-governance
+  - uid: learn.wwl.implement-information-protection
+  - uid: learn.wwl.implement-data-loss-prevention
+  - uid: learn.wwl.implement-information-governance
 relatedCertifications:
-- related:
-    uid: certification.information-protection-administrator
+  - related:
+      uid: certification.information-protection-administrator
 resources:
-- title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
-  href: https://aka.ms/traincertposter
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
-  href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: ../help.md
-- title: Zertifizierungsdashboard
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
-  href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
-  href: ../certification-exam-policies.md
+  - title: Schulungs- und Zertifizierungsleitfaden
+    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+    href: 'https://aka.ms/TrainingCertDeck'
+  - title: Zertifizierungsposter
+    description: 'Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.'
+    href: 'https://aka.ms/traincertposter'
+  - title: Exam Replay
+    description: 'Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.'
+    href: ../deals.md
+  - title: Unterstützung bei Zertifizierungsprüfungen
+    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+    href: ../help.md
+  - title: Zertifizierungsdashboard
+    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
+    href: 'https://www.microsoft.com/learning/dashboard.aspx'
+  - title: Unterkünfte anfordern
+    description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+    href: ../request-accommodations.md
+  - title: Prüfungsrichtlinien und FAQs
+    description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+    href: ../certification-exam-policies.md
