--- a/learn-certs-pr/identity-and-access-administrator/index.yml
+++ b/learn-certs-pr/identity-and-access-administrator/index.yml
@@ -2,72 +2,55 @@
 title: 'Microsoft Certified: Identity and Access Administrator Associate'
 metadata:
   title: 'Microsoft Certified: Identity and Access Administrator Associate'
-  description: Benutzer*innen mit der Zertifizierung „Microsoft Identity and Access Administrator“ entwerfen, implementieren und verwalten die Identitäts- und Zugriffsverwaltungssysteme einer Organisation mithilfe von Azure AD. Er*Sie verwaltet Aufgaben wie das Bereitstellen sicherer Authentifizierungs- und Autorisierungszugriffe auf Unternehmensanwendungen.
-  ms.openlocfilehash: 3f2f1608b487e21fdac0e995906beee8219d7930
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137658609"
+  description: 'Benutzer*innen mit der Zertifizierung „Microsoft Identity and Access Administrator“ entwerfen, implementieren und verwalten die Identitäts- und Zugriffsverwaltungssysteme einer Organisation mithilfe von Azure AD. Er*Sie verwaltet Aufgaben wie das Bereitstellen sicherer Authentifizierungs- und Autorisierungszugriffe auf Unternehmensanwendungen.'
 uid: certification.identity-and-access-administrator
 certificationRenewalUid: renewal.identity-and-access-administrator
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: >-
-  > [!IMPORTANT]
-
-  > Die englischsprachige Version dieser Zertifizierung wird am 28. Januar 2022 aktualisiert. Laden Sie das Dokument zur Kompetenzmessung auf der Seite [Prüfung SC-300](/learn/certifications/exams/sc-300) herunter, um zu sehen, was sich ändern wird.
-
-
-  <br/>
-
-  Der*Die Microsoft Identity and Access Administrator entwirft, implementiert und betreibt die Systeme zur Identitäts- und Zugriffsverwaltung einer Organisation mithilfe von Azure Active Directory (Azure AD). Er*Sie verwaltet Aufgaben wie das Bereitstellen sicherer Authentifizierungs- und Autorisierungszugriffe auf Unternehmensanwendungen. Der*Die Administrator*in bietet nahtlose Benutzerumgebungen und Self-Service-Verwaltungsfunktionen für alle Benutzer*innen. Der adaptive Zugriff und die Governance sind Kernelemente der Rolle. Diese Rolle ist auch für die Problembehandlung, das Überwachen und die Berichterstellung für die Identitäts- und Zugriffsumgebung verantwortlich.
-
-
-  Der*Die Identity and Access Administrator kann eine einzelne Person oder ein Mitglied eines größeren Teams sein. Diese Rolle arbeitet mit vielen anderen Rollen in der Organisation zusammen, um strategische Identitätsprojekte zum Modernisieren von Identitätslösungen zu fördern sowie Hybrid-Identitätslösungen und Identitätsgovernance zu implementieren.
-subTitle: Benutzer*innen mit der Zertifizierung „Microsoft Identity and Access Administrator“ entwerfen, implementieren und verwalten die Identitäts- und Zugriffsverwaltungssysteme einer Organisation mithilfe von Azure AD. Er*Sie verwaltet Aufgaben wie das Bereitstellen sicherer Authentifizierungs- und Autorisierungszugriffe auf Unternehmensanwendungen.
+summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieser Zertifizierung wurde am 28.\_Januar\_2022 aktualisiert. Laden Sie das Dokument zur Kompetenzmessung auf der Seite [Prüfung SC-300](/learn/certifications/exams/sc-300) herunter, um zu sehen, was sich geändert hat.\n\n<br/>\nDer*Die Microsoft Identity and Access Administrator entwirft, implementiert und betreibt die Systeme zur Identitäts- und Zugriffsverwaltung einer Organisation mithilfe von Azure Active Directory (Azure AD). Er*Sie verwaltet Aufgaben wie das Bereitstellen sicherer Authentifizierungs- und Autorisierungszugriffe auf Unternehmensanwendungen. Der*Die Administrator*in bietet nahtlose Benutzerumgebungen und Self-Service-Verwaltungsfunktionen für alle Benutzer*innen. Der adaptive Zugriff und die Governance sind Kernelemente der Rolle. Diese Rolle ist auch für die Problembehandlung, das Überwachen und die Berichterstellung für die Identitäts- und Zugriffsumgebung verantwortlich.\n\nDer*Die Identity and Access Administrator kann eine einzelne Person oder ein Mitglied eines größeren Teams sein. Diese Rolle arbeitet mit vielen anderen Rollen in der Organisation zusammen, um strategische Identitätsprojekte zum Modernisieren von Identitätslösungen zu fördern sowie Hybrid-Identitätslösungen und Identitätsgovernance zu implementieren."
+subTitle: 'Benutzer*innen mit der Zertifizierung „Microsoft Identity and Access Administrator“ entwerfen, implementieren und verwalten die Identitäts- und Zugriffsverwaltungssysteme einer Organisation mithilfe von Azure AD. Er*Sie verwaltet Aufgaben wie das Bereitstellen sicherer Authentifizierungs- und Autorisierungszugriffe auf Unternehmensanwendungen.'
 levels:
-- intermediate
+  - intermediate
 skills:
-- Implement an identity management solution
-- Implement an authentication and access management solution
-- Implement access management for apps
-- Plan and implement an identity governance strategy
+  - Implement an identity management solution
+  - Implement an authentication and access management solution
+  - Implement access management for apps
+  - Plan and implement an identity governance strategy
 roles:
-- administrator
-- identity-access-admin
-- security-engineer
+  - administrator
+  - identity-access-admin
+  - security-engineer
 type: role-based
 products:
-- azure
-- azure-active-directory
-- azure-log-analytics
-- azure-sentinel
+  - azure
+  - azure-active-directory
+  - azure-log-analytics
+  - azure-sentinel
 courses:
-- uid: course.sc-300t00
+  - uid: course.sc-300t00
 paths:
-- uid: learn.wwl.implement-identity-management-solution
-- uid: learn.wwl.implement-authentication-access-management-solution
-- uid: learn.wwl.implement-access-management-for-apps
-- uid: learn.wwl.plan-implement-identity-governance-strategy
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Mr7Z
+  - uid: learn.wwl.implement-identity-management-solution
+  - uid: learn.wwl.implement-authentication-access-management-solution
+  - uid: learn.wwl.implement-access-management-for-apps
+  - uid: learn.wwl.plan-implement-identity-governance-strategy
+pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Mr7Z'
 exams:
-- uid: exam.sc-300
+  - uid: exam.sc-300
 resources:
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
-  href: https://aka.ms/traincertposter
-- title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://aka.ms/TrainingCertDeck
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
-  href: ../deals.md
-- title: Zertifizierungsdashboard
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
-  href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: ../help.md
-- title: Teilen Sie Ihre Zertifizierungsbadges.
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
-  href: ../badges.md
+  - title: Zertifizierungsposter
+    description: 'Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.'
+    href: 'https://aka.ms/traincertposter'
+  - title: Schulungs- und Zertifizierungsleitfaden
+    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+    href: 'https://aka.ms/TrainingCertDeck'
+  - title: Exam Replay
+    description: 'Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.'
+    href: ../deals.md
+  - title: Zertifizierungsdashboard
+    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
+    href: 'https://www.microsoft.com/learning/dashboard.aspx'
+  - title: Unterstützung von Zertifizierungen
+    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+    href: ../help.md
+  - title: Teilen Sie Ihre Zertifizierungsbadges.
+    description: 'Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.'
+    href: ../badges.md
