--- a/learn-certs-pr/microsoft-365-fundamentals/index.yml
+++ b/learn-certs-pr/microsoft-365-fundamentals/index.yml
@@ -2,69 +2,55 @@
 title: 'Microsoft 365 Certified: Fundamentals'
 metadata:
   title: 'Microsoft 365 Certified: Fundamentals'
-  description: Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.
-  ms.openlocfilehash: 62d013b9a8cde4b4b35f263f07b6590b648c2a49
-  ms.sourcegitcommit: a99616c85658bcdbb3b95b115da620965190777e
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 01/25/2022
-  ms.locfileid: "137685699"
+  description: 'Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.'
 uid: certification.microsoft-365-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
-summary: >-
-  > [!IMPORTANT]
-
-  > Der Inhalt dieser Zertifizierung wurde am 25. Oktober 2021 aktualisiert. Laden Sie das Dokument zur Kompetenzmessung auf der Seite [Prüfung MS-900](/learn/certifications/exams/ms-900) herunter, um zu sehen, was sich geändert hat.
-
-
-  <br/>
-
-  Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.
-subTitle: Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.
+summary: "> [!NOTE]\n> Das Produktteam hat vor Kurzem die Umbenennung mehrerer Technologien abgeschlossen, die in dieser Prüfung eine Rolle spielen. Zu den Änderungen zählt Folgendes:\n> - Der Windows Virtual Desktop heißt jetzt Azure Virtual Desktop\n> - Workplace Analytics heißt jetzt Viva Insights\n> - Cloud App Security heißt jetzt Microsoft Defender for Cloud Apps\n> - Microsoft 365 Security Center heißt jetzt Microsoft 365 Defender-Portal\n> \n> Diese Änderungen werden seit dem 28.\_Januar\_2022 in der Prüfung berücksichtigt.\n\n<br/>\nZeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes."
+subTitle: 'Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.'
 levels:
-- beginner
+  - beginner
 skills:
-- Describe cloud concepts
-- Describe core Microsoft 365 services and concepts
-- Explain security, compliance, privacy, and trust in Microsoft 365
-- Describe Microsoft 365 pricing and support
+  - Describe cloud concepts
+  - Describe core Microsoft 365 services and concepts
+  - 'Explain security, compliance, privacy, and trust in Microsoft 365'
+  - Describe Microsoft 365 pricing and support
 roles:
-- business-user
-- administrator
+  - business-user
+  - administrator
 type: fundamentals
 products:
-- m365
-- windows
-- office-365
+  - m365
+  - windows
+  - office-365
 courses:
-- uid: course.ms-900t01
+  - uid: course.ms-900t01
 paths:
-- uid: learn.wwl.m365-productivity-teamwork-solutions
-- uid: learn.wwl.m365-business-management-solutions
-- uid: learn.wwl.m365-security-compliance-capabilities
-- uid: learn.wwl.m365-licensing-service-support
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VRKj
+  - uid: learn.wwl.m365-productivity-teamwork-solutions
+  - uid: learn.wwl.m365-business-management-solutions
+  - uid: learn.wwl.m365-security-compliance-capabilities
+  - uid: learn.wwl.m365-licensing-service-support
+pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VRKj'
 exams:
-- uid: exam.ms-900
+  - uid: exam.ms-900
 resources:
-- title: Lernpfad zur Zertifizierung
-  description: 'Entdecken Sie Schulungsressourcen, um die Zertifizierung „Microsoft Certified: Fundamentals“ zu erlangen.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35svT
-- title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://aka.ms/traincertposter
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
-  href: ../deals.md
-- title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: ../help.md
-- title: Zertifizierungsdashboard
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
-  href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Teilen Sie Ihre Zertifizierungsbadges.
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
-  href: ../badges.md
+  - title: Lernpfad zur Zertifizierung
+    description: 'Entdecken Sie Schulungsressourcen, um die Zertifizierung „Microsoft Certified: Fundamentals“ zu erlangen.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35svT'
+  - title: Schulungs- und Zertifizierungsleitfaden
+    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+    href: 'https://aka.ms/TrainingCertDeck'
+  - title: Zertifizierungsposter
+    description: 'Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.'
+    href: 'https://aka.ms/traincertposter'
+  - title: Exam Replay
+    description: 'Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.'
+    href: ../deals.md
+  - title: Unterstützung von Zertifizierungen
+    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+    href: ../help.md
+  - title: Zertifizierungsdashboard
+    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
+    href: 'https://www.microsoft.com/learning/dashboard.aspx'
+  - title: Teilen Sie Ihre Zertifizierungsbadges.
+    description: 'Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.'
+    href: ../badges.md
