--- a/learn-certs-pr/security-compliance-and-identity-fundamentals/index.yml
+++ b/learn-certs-pr/security-compliance-and-identity-fundamentals/index.yml
@@ -2,88 +2,68 @@
 title: 'Microsoft Certified: Security, Compliance, and Identity Fundamentals'
 metadata:
   title: 'Microsoft Certified: Security, Compliance, and Identity Fundamentals'
-  description: Sie weisen nach, dass Sie mit Microsoft Azure und Microsoft 365 vertraut sind und verstehen, wie die Microsoft-Lösungen für Sicherheit, Compliance und Identität diese Bereiche abdecken, um eine ganzheitliche Lösung zu bieten.
-  ms.openlocfilehash: f349a3e1caeb3ef04209093986deeb518760376f
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137659379"
+  description: 'Sie weisen nach, dass Sie mit Microsoft Azure und Microsoft 365 vertraut sind und verstehen, wie die Microsoft-Lösungen für Sicherheit, Compliance und Identität diese Bereiche abdecken, um eine ganzheitliche Lösung zu bieten.'
 uid: certification.security-compliance-and-identity-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
-summary: >-
-  > [!IMPORTANT]
-
-  > Die englischsprachige Version dieser Zertifizierung wird am 28. Januar 2022 aktualisiert. Laden Sie das Dokument zur Kompetenzmessung auf der Seite [Prüfung SC-900](/learn/certifications/exams/sc-900) herunter, um zu sehen, was sich ändern wird.
-
-
-  <br/>
-
-  Diese Zertifizierung richtet sich an Personen, die sich mit den Grundlagen von Sicherheit, Compliance und Identität (SCI) in cloudbasierten und verwandten Microsoft-Diensten vertraut machen möchten.
-
-
-  Hierbei handelt es sich um eine breite Zielgruppe, zu der Beteiligte im Unternehmen, neue oder vorhandene IT-Expert*innen oder Studierende gehören können, die ein Interesse an Sicherheits-, Compliance- und Identitätslösungen von Microsoft haben.
-
-
-  Kandidat*innen sollten mit Microsoft Azure und Microsoft 365 vertraut sein und ein Interesse daran haben, zu verstehen, wie die Microsoft-Lösungen für Sicherheit, Compliance und Identität diese Bereiche abdecken, um eine ganzheitliche Lösung zu bieten.
-subTitle: Sie weisen nach, dass Sie mit Microsoft Azure und Microsoft 365 vertraut sind und verstehen, wie die Microsoft-Lösungen für Sicherheit, Compliance und Identität diese Bereiche abdecken, um eine ganzheitliche Lösung zu bieten.
+summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieser Zertifizierung wurde am 28.\_Januar\_2022 aktualisiert. Laden Sie das Dokument zur Kompetenzmessung auf der Seite [Prüfung SC-900](/learn/certifications/exams/sc-900) herunter, um zu sehen, was sich geändert hat.\n\n<br/>\nDiese Zertifizierung richtet sich an Personen, die sich mit den Grundlagen von Sicherheit, Compliance und Identität (SCI) in cloudbasierten und verwandten Microsoft-Diensten vertraut machen möchten.\n\nHierbei handelt es sich um eine breite Zielgruppe, zu der Beteiligte im Unternehmen, neue oder vorhandene IT-Expert*innen oder Studierende gehören können, die ein Interesse an Sicherheits-, Compliance- und Identitätslösungen von Microsoft haben.\n\nKandidat*innen sollten mit Microsoft Azure und Microsoft 365 vertraut sein und ein Interesse daran haben, zu verstehen, wie die Microsoft-Lösungen für Sicherheit, Compliance und Identität diese Bereiche abdecken, um eine ganzheitliche Lösung zu bieten."
+subTitle: 'Sie weisen nach, dass Sie mit Microsoft Azure und Microsoft 365 vertraut sind und verstehen, wie die Microsoft-Lösungen für Sicherheit, Compliance und Identität diese Bereiche abdecken, um eine ganzheitliche Lösung zu bieten.'
 levels:
-- beginner
+  - beginner
 skills:
-- Describe the concepts of security, compliance, and identity
-- Describe the capabilities of Microsoft identity and access management solutions
-- Describe the capabilities of Microsoft security solutions
-- Describe the capabilities of Microsoft compliance solutions
+  - 'Describe the concepts of security, compliance, and identity'
+  - Describe the capabilities of Microsoft identity and access management solutions
+  - Describe the capabilities of Microsoft security solutions
+  - Describe the capabilities of Microsoft compliance solutions
 roles:
-- business-user
-- student
+  - business-user
+  - student
 type: fundamentals
 products:
-- azure
-- azure-active-directory
-- azure-bastion
-- azure-blueprints
-- azure-ddos-protection
-- azure-firewall
-- azure-policy
-- azure-security-center
-- azure-sentinel
-- azure-web-application-firewall
-- m365
-- mem-intune
-- m365-ems-cloud-app-security
-- m365-threat-protection
-- m365-security-score
-- m365-security-center
-- mdatp
-- mem
-- office-365-atp
+  - azure
+  - azure-active-directory
+  - azure-bastion
+  - azure-blueprints
+  - azure-ddos-protection
+  - azure-firewall
+  - azure-policy
+  - azure-security-center
+  - azure-sentinel
+  - azure-web-application-firewall
+  - m365
+  - mem-intune
+  - m365-ems-cloud-app-security
+  - m365-threat-protection
+  - m365-security-score
+  - m365-security-center
+  - mdatp
+  - mem
+  - office-365-atp
 paths:
-- uid: learn.wwl.describe-concepts-of-security-compliance-identity
-- uid: learn.wwl.describe-capabilities-of-microsoft-identity-access-management-solutions
-- uid: learn.wwl.describe-capabilities-of-microsoft-security-solutions
-- uid: learn.wwl.describe-capabilities-of-microsoft-compliance-solutions
+  - uid: learn.wwl.describe-concepts-of-security-compliance-identity
+  - uid: learn.wwl.describe-capabilities-of-microsoft-identity-access-management-solutions
+  - uid: learn.wwl.describe-capabilities-of-microsoft-security-solutions
+  - uid: learn.wwl.describe-capabilities-of-microsoft-compliance-solutions
 courses:
-- uid: course.sc-900t00
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Myp7
+  - uid: course.sc-900t00
+pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Myp7'
 exams:
-- uid: exam.sc-900
+  - uid: exam.sc-900
 resources:
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
-  href: https://aka.ms/traincertposter
-- title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://aka.ms/TrainingCertDeck
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
-  href: ../deals.md
-- title: Zertifizierungsdashboard
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
-  href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: ../help.md
-- title: Teilen Sie Ihre Zertifizierungsbadges.
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
-  href: ../badges.md
+  - title: Zertifizierungsposter
+    description: 'Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.'
+    href: 'https://aka.ms/traincertposter'
+  - title: Schulungs- und Zertifizierungsleitfaden
+    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+    href: 'https://aka.ms/TrainingCertDeck'
+  - title: Exam Replay
+    description: 'Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.'
+    href: ../deals.md
+  - title: Zertifizierungsdashboard
+    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
+    href: 'https://www.microsoft.com/learning/dashboard.aspx'
+  - title: Unterstützung von Zertifizierungen
+    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+    href: ../help.md
+  - title: Teilen Sie Ihre Zertifizierungsbadges.
+    description: 'Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.'
+    href: ../badges.md
