commit translated contents

--- a/learn-certs-pr/exams/mb-910.yml
+++ b/learn-certs-pr/exams/mb-910.yml
@@ -3,88 +3,79 @@ title: Microsoft Dynamics 365 Fundamentals (CRM)
 metadata:
   title: 'Examen MB-910: Microsoft Dynamics 365 Fundamentals (CRM)'
   description: 'Examen MB-910: Microsoft Dynamics 365 Fundamentals (CRM)'
-  ms.openlocfilehash: 501d65d111d0b81cf253431185a8ef1359806839
-  ms.sourcegitcommit: e810ce5501e748cb92937addddb4267cde8adbc7
-  ms.translationtype: MT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 01/26/2022
-  ms.locfileid: "137778413"
 uid: exam.mb-910
 displayName: MB-910
-summary: >-
-  In diesem Examen werden die Features und Funktionen der Microsoft Dynamics 365 Customer Engagement-Apps behandelt.
-
-
-  Kandidat*innen für dieses Examen sollten über allgemeine Kenntnisse oder einschlägige Berufserfahrung in einem IT-Umfeld (Informationstechnologie) verfügen. Lernende sollten außerdem über ein grundlegendes Verständnis der Kundenbindungsprinzipien und des Geschäftsbetriebs verfügen.
+summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieses Examens wird am 28.\_Februar\_2022 aktualisiert. Laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.\n>\n> Notwendige Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\n<br/>\nIn diesem Examen werden die Features und Funktionen der Microsoft Dynamics 365 Customer Engagement-Apps behandelt.\n\nKandidat*innen für dieses Examen sollten über allgemeine Kenntnisse oder einschlägige Berufserfahrung in einem IT-Umfeld (Informationstechnologie) verfügen. Lernende sollten außerdem über ein grundlegendes Verständnis der Kundenbindungsprinzipien und des Geschäftsbetriebs verfügen.\n\n> [!TIP]\n> [Laden Sie kostenlose Beispielfragen herunter, um sich auf dieses Examen vorzubereiten.](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWSHpu)"
 subTitle: 'In diesem Examen wird Ihre Fähigkeit abgefragt, Folgendes zu beschreiben: Dynamics 365 Marketing, Dynamics 365 Sales, Dynamics 365 Customer Service, Dynamics 365 Field Service, Project Operations und gemeinsame Features.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4JIev
-practiceTestUrl: https://www.mindhub.com/p/MU-MB-910?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4JIev'
+practiceTestUrl: 'https://www.mindhub.com/p/MU-MB-910?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice'
 providers:
-- providerType: pearson-vue
-  examUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MB-910&examname=Exam%20MB-910:%20Microsoft%20Dynamics%20365%20Fundamentals%20(CRM)&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-910
-- providerType: certiport
-  examUrl: http://www.certiport.com/locator
+  - providerType: pearson-vue
+    examUrl: 'https://examregistration.microsoft.com/?locale=en-us&examcode=MB-910&examname=Exam%20MB-910:%20Microsoft%20Dynamics%20365%20Fundamentals%20(CRM)&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-910'
+  - providerType: certiport
+    examUrl: 'http://www.certiport.com/locator'
 locales:
-- en
-- ja
-- zh-cn
-- ko
-- fr
-- es
-- pt-br
-- ru
-- ar-sa
-- zh-tw
-- it
-- de
+  - en
+  - ja
+  - zh-cn
+  - ko
+  - fr
+  - es
+  - pt-br
+  - ru
+  - ar-sa
+  - zh-tw
+  - it
+  - de
 levels:
-- beginner
+  - beginner
 skills:
-- Describe Dynamics 365 Marketing (10-15%)
-- Describe Dynamics 365 Sales (15-20%)
-- Describe Dynamics 365 Customer Service (15-20%)
-- Describe Dynamics 365 Field Service (15-20%)
-- Describe Project Operations (15-20%)
-- Describe shared features (15-20%)
+  - 'The English language version of this exam will be updated on February 28, 2022. Please download the exam skills outline below to see what’s changing.'
+  - Describe Dynamics 365 Marketing (10-15%)
+  - Describe Dynamics 365 Sales (15-20%)
+  - Describe Dynamics 365 Customer Service (15-20%)
+  - Describe Dynamics 365 Field Service (15-20%)
+  - Describe Project Operations (15-20%)
+  - Describe shared features (15-20%)
 roles:
-- business-owner
-- business-user
-- functional-consultant
-- student
+  - business-owner
+  - business-user
+  - functional-consultant
+  - student
 products:
-- dynamics-365
-- dynamics-customer-engagement
+  - dynamics-365
+  - dynamics-customer-engagement
 courses:
-- uid: course.mb-910t00
+  - uid: course.mb-910t00
 paths:
-- uid: learn.wwl.explore-microsoft-dynamics-365-marketing
-- uid: learn.wwl.explore-microsoft-dynamics-365-sales
-- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-customer-service
-- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-field-service
-- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-project-operations-crm
+  - uid: learn.wwl.explore-microsoft-dynamics-365-marketing
+  - uid: learn.wwl.explore-microsoft-dynamics-365-sales
+  - uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-customer-service
+  - uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-field-service
+  - uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-project-operations-crm
 relatedCertifications:
-- related:
-    uid: certification.d365-fundamentals-customer-engagement-apps-crm
+  - related:
+      uid: certification.d365-fundamentals-customer-engagement-apps-crm
 resources:
-- title: Lernpfad zur Zertifizierung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAs3I
-- title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: ../help.md
-- title: Zertifizierungsdashboard
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
-  href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
-  href: ../certification-exam-policies.md
+  - title: Lernpfad zur Zertifizierung
+    description: 'Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAs3I'
+  - title: Schulungs- und Zertifizierungsleitfaden
+    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+    href: 'https://aka.ms/TrainingCertDeck'
+  - title: Zertifizierungsposter
+    description: 'Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL'
+  - title: Unterstützung bei Zertifizierungsprüfungen
+    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+    href: ../help.md
+  - title: Zertifizierungsdashboard
+    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
+    href: 'https://www.microsoft.com/learning/dashboard.aspx'
+  - title: Unterkünfte anfordern
+    description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+    href: ../request-accommodations.md
+  - title: Prüfungsrichtlinien und FAQs
+    description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+    href: ../certification-exam-policies.md
