--- a/learn-certs-pr/d365-fundamentals-customer-engagement-apps-crm/index.yml
+++ b/learn-certs-pr/d365-fundamentals-customer-engagement-apps-crm/index.yml
@@ -2,68 +2,62 @@
 title: 'Microsoft Certified: Dynamics 365 Fundamentals (CRM)'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Fundamentals (CRM)'
-  description: Wenn Sie mit dem Geschäftsbetrieb, Kundenbeziehungsmanagement (CRM) und IT vertraut sind – allgemein oder durch Berufserfahrung – können Sie diese Zertifizierung nutzen, um diese Fähigkeiten hervorzuheben. Bestätigen Sie Ihre umfassende Erfahrung mit den Kundenbindungsfunktionen von Dynamics 365, um Ihre Karriere zu verbessern.
-  ms.openlocfilehash: 370d9b9e521d6b83750e2cdae537d3e07b111b73
-  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
-  ms.translationtype: MT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 12/28/2021
-  ms.locfileid: "132106699"
+  description: "Wenn Sie mit dem Geschäftsbetrieb, Kundenbeziehungsmanagement (CRM) und IT vertraut sind\_– allgemein oder durch Berufserfahrung\_– können Sie diese Zertifizierung nutzen, um diese Fähigkeiten hervorzuheben. Bestätigen Sie Ihre umfassende Erfahrung mit den Kundenbindungsfunktionen von Dynamics\_365, um Ihre Karriere zu verbessern."
 uid: certification.d365-fundamentals-customer-engagement-apps-crm
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
-summary: "Wenn Sie mit dem Geschäftsbetrieb, Kundenbeziehungsmanagement (CRM) und IT vertraut sind – allgemein oder durch Berufserfahrung – können Sie diese Zertifizierung nutzen, um diese Fähigkeiten hervorzuheben. Bestätigen Sie Ihre umfassende Erfahrung mit den Kundenbindungsfunktionen von Dynamics 365, um Ihre Karriere zu verbessern.\n\nVon dieser Grundlagenzertifizierung profitieren Personen in unterschiedlichen Aufgabenbereichen und verschiedenen Karrierephasen. Hier sehen Sie einige Beispiele:\n- IT-Expert*innen, die ein grundlegendes Verständnis der Anwendungen beweisen möchten, mit denen sie arbeiten \n- Projektbeteiligte in Unternehmen und andere Personen, die sich mit Dynamics 365 auskennen und ihre Fähigkeiten und Erfahrungen bestätigen möchten\n- Entwickler*innen, die ihr Verständnis von Geschäftsvorgängen und CRM hervorheben möchten\n- Studierende, frische Absolventen und Personen, die sich beruflich umorientieren und die Kundenbindungsfunktionen von Dynamics 365 nutzen möchten, um einen Schritt weiterzukommen"
-subTitle: Wenn Sie mit dem Geschäftsbetrieb, Kundenbeziehungsmanagement (CRM) und IT vertraut sind – allgemein oder durch Berufserfahrung – können Sie diese Zertifizierung nutzen, um diese Fähigkeiten hervorzuheben. Bestätigen Sie Ihre umfassende Erfahrung mit den Kundenbindungsfunktionen von Dynamics 365, um Ihre Karriere zu verbessern.
+summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieser Zertifizierung wird am 28. Februar 2022 aktualisiert. Laden Sie das Dokument zur Kompetenzmessung auf der Seite [Exam MB-910](/learn/certifications/exams/mb-910) herunter, um zu sehen, was sich ändern wird.\n\n<br/>\nWenn Sie mit dem Geschäftsbetrieb, Kundenbeziehungsmanagement (CRM) und IT vertraut sind\_– allgemein oder durch Berufserfahrung\_– können Sie diese Zertifizierung nutzen, um diese Fähigkeiten hervorzuheben. Bestätigen Sie Ihre umfassende Erfahrung mit den Kundenbindungsfunktionen von Dynamics\_365, um Ihre Karriere zu verbessern.\n\nVon dieser Grundlagenzertifizierung profitieren Personen in unterschiedlichen Aufgabenbereichen und verschiedenen Karrierephasen. Hier sehen Sie einige Beispiele:\n- IT-Expert*innen, die ein grundlegendes Verständnis der Anwendungen beweisen möchten, mit denen sie arbeiten \n- Projektbeteiligte in Unternehmen und andere Personen, die sich mit Dynamics\_365 auskennen und ihre Fähigkeiten und Erfahrungen bestätigen möchten\n- Entwickler*innen, die ihr Verständnis von Geschäftsvorgängen und CRM hervorheben möchten\n- Studierende, frische Absolventen und Personen, die sich beruflich umorientieren und die Kundenbindungsfunktionen von Dynamics\_365 nutzen möchten, um einen Schritt weiterzukommen"
+subTitle: "Wenn Sie mit dem Geschäftsbetrieb, Kundenbeziehungsmanagement (CRM) und IT vertraut sind\_– allgemein oder durch Berufserfahrung\_– können Sie diese Zertifizierung nutzen, um diese Fähigkeiten hervorzuheben. Bestätigen Sie Ihre umfassende Erfahrung mit den Kundenbindungsfunktionen von Dynamics\_365, um Ihre Karriere zu verbessern."
 levels:
-- beginner
+  - beginner
 skills:
-- Describe Dynamics 365 Marketing
-- Describe Dynamics 365 Sales
-- Describe Dynamics 365 Customer Service
-- Describe Dynamics 365 Field Service
-- Describe Project Operations
-- Describe shared features
+  - Describe Dynamics 365 Marketing
+  - Describe Dynamics 365 Sales
+  - Describe Dynamics 365 Customer Service
+  - Describe Dynamics 365 Field Service
+  - Describe Project Operations
+  - Describe shared features
 roles:
-- business-owner
-- business-user
-- functional-consultant
-- student
+  - business-owner
+  - business-user
+  - functional-consultant
+  - student
 type: fundamentals
 products:
-- dynamics-365
-- dynamics-customer-engagement
+  - dynamics-365
+  - dynamics-customer-engagement
 courses:
-- uid: course.mb-910t00
+  - uid: course.mb-910t00
 paths:
-- uid: learn.wwl.explore-microsoft-dynamics-365-marketing
-- uid: learn.wwl.explore-microsoft-dynamics-365-sales
-- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-customer-service
-- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-field-service
-- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-project-operations-crm
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4JIew
+  - uid: learn.wwl.explore-microsoft-dynamics-365-marketing
+  - uid: learn.wwl.explore-microsoft-dynamics-365-sales
+  - uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-customer-service
+  - uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-field-service
+  - uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-project-operations-crm
+pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4JIew'
 exams:
-- uid: exam.mb-910
+  - uid: exam.mb-910
 resources:
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Reise zur Zertifizierung
-  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAmVj
-- title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://aka.ms/TrainingCertDeck
-- title: Lernpfad zur Zertifizierung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAs3I
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
-  href: ../deals.md
-- title: Zertifizierungsdashboard
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
-  href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: ../help.md
-- title: Teilen Sie Ihre Zertifizierungsbadges.
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
-  href: ../badges.md
+  - title: Zertifizierungsposter
+    description: 'Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL'
+  - title: Reise zur Zertifizierung
+    description: 'Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAmVj'
+  - title: Schulungs- und Zertifizierungsleitfaden
+    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+    href: 'https://aka.ms/TrainingCertDeck'
+  - title: Lernpfad zur Zertifizierung
+    description: 'Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAs3I'
+  - title: Exam Replay
+    description: 'Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.'
+    href: ../deals.md
+  - title: Zertifizierungsdashboard
+    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
+    href: 'https://www.microsoft.com/learning/dashboard.aspx'
+  - title: Unterstützung von Zertifizierungen
+    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+    href: ../help.md
+  - title: Teilen Sie Ihre Zertifizierungsbadges.
+    description: 'Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.'
+    href: ../badges.md
